--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -13,7 +13,7 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 800px;
+            max-width: 100%;
             margin: auto;
             background: white;
             padding: 20px;
@@ -23,12 +23,14 @@
         h1 {
             text-align: center;
             color: #333;
+            font-size: 1.5rem;
         }
         h2 {
             background-color: #28a745;
             color: white;
             padding: 10px;
             border-radius: 4px;
+            font-size: 1.25rem;
         }
         .section {
             background-color: #d4edda;
@@ -54,6 +56,51 @@
         }
         .btn-download:hover {
             background-color: #1e7e34;
+        }
+        .image-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 15px;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            margin: auto;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 1.25rem;
+            }
+
+            h2 {
+                font-size: 1.1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 1rem;
+            }
+
+            h2 {
+                font-size: 1rem;
+            }
+
+            .btn-download {
+                font-size: 0.9rem;
+                padding: 8px;
+            }
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
@@ -116,27 +163,11 @@
             doc.save('There_is_There_are_David_and_Goliath.pdf');
         }
     </script>
-
-<style>
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.image-container img {
-    max-width: 100px;
-    margin: auto;
-}
-</style>
 </head>
 <body>
 <button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #218838; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
-
 
 <div class="container">
     <h1>There is / There are - David and Goliath</h1>
