--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -43,11 +43,12 @@
             padding: 5px 0;
         }
         .section input[type="text"] {
-            width: 100%;
+            width: calc(100% - 20px); /* Ajusta a largura para caber dentro da seção */
             padding: 10px;
             margin-top: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            box-sizing: border-box; /* Inclui padding e borda no cálculo da largura */
         }
         .btn-download {
             display: block;
