--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -180,6 +180,7 @@
 <div class="container">
     <h1>There is / There are - David and Goliath</h1>
     
+    <!-- Aqui está a imagem que deve ser carregada corretamente -->
     <img src="image.png" alt="David and Goliath" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
 
     <div class="section">
