--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -111,66 +111,6 @@
             }
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-    <script>
-        function generatePDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-
-            doc.setFontSize(20);
-            doc.text('There is / There are - David and Goliath', 20, 20);
-
-            doc.setFontSize(12);
-            doc.text('A', 20, 30);
-            doc.text('Look at these sentences from the story of David and Goliath:', 20, 35);
-            doc.text('• There is a giant in the valley.', 20, 40);
-            doc.text('• There are five stones in David\'s hand.', 20, 45);
-            doc.text('• There is an Israelite army ready for battle.', 20, 50);
-            doc.text('• There are many Philistine soldiers.', 20, 55);
-
-            doc.text('B', 20, 65);
-            doc.text('There is and There are are used to say that something exists or is present.', 20, 70);
-            doc.text('There is = singular (one thing)', 20, 75);
-            doc.text('• There is a sling in David\'s hand.', 20, 80);
-            doc.text('• There is a young shepherd named David.', 20, 85);
-            doc.text('There are = plural (more than one thing)', 20, 90);
-            doc.text('• There are five stones.', 20, 95);
-            doc.text('• There are many soldiers in the army.', 20, 100);
-
-            doc.text('C', 20, 110);
-            doc.text('Now complete these sentences from the story:', 20, 115);
-            doc.text('1. __________ a giant named Goliath. (There is)', 20, 120);
-            doc.text('2. __________ five smooth stones. (There are)', 20, 125);
-            doc.text('3. __________ a sling in David\'s hand. (There is)', 20, 130);
-            doc.text('4. __________ many soldiers in the Israelite army. (There are)', 20, 135);
-            doc.text('5. __________ a great battle in the valley. (There is)', 20, 140);
-
-            doc.text('D', 20, 150);
-            doc.text('Write the correct form of there is or there are:', 20, 155);
-            doc.text('1. __________ a shepherd with courage.', 20, 160);
-            doc.text('2. __________ two armies ready for battle.', 20, 165);
-            doc.text('3. __________ a large valley between the armies.', 20, 170);
-            doc.text('4. __________ many stones in the stream.', 20, 175);
-            doc.text('5. __________ a great victory for Israel.', 20, 180);
-
-            doc.text('E', 20, 190);
-            doc.text('Questions and Answers:', 20, 195);
-            doc.text('1. What is there in David\'s hand?', 20, 200);
-            doc.text('- There is a sling and there are five stones.', 20, 205);
-            doc.text('2. Who is there in the valley?', 20, 210);
-            doc.text('- There is a giant named Goliath.', 20, 215);
-            doc.text('3. How many soldiers are there in the Philistine army?', 20, 220);
-            doc.text('- There are many soldiers.', 20, 225);
-
-            doc.text('F', 20, 235);
-            doc.text('Now you. Write about what there is or there are in your favorite story:', 20, 240);
-            doc.text('1. ________________________________________________________', 20, 245);
-            doc.text('2. ________________________________________________________', 20, 250);
-            doc.text('3. ________________________________________________________', 20, 255);
-
-            doc.save('There_is_There_are_David_and_Goliath.pdf');
-        }
-    </script>
 </head>
 <body>
 <button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #218838; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
@@ -180,7 +120,7 @@
 <div class="container">
     <h1>There is / There are - David and Goliath</h1>
     
-    <!-- Aqui está a imagem que deve ser carregada corretamente -->
+    <!-- Referência para a imagem -->
     <img src="image.png" alt="David and Goliath" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
 
     <div class="section">
