--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -43,12 +43,12 @@
             padding: 5px 0;
         }
         .section input[type="text"] {
-            width: calc(100% - 20px); /* Ajusta a largura para caber dentro da seção */
+            width: calc(100% - 20px);
             padding: 10px;
             margin-top: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box; /* Inclui padding e borda no cálculo da largura */
+            box-sizing: border-box;
         }
         .btn-download {
             display: block;
@@ -66,16 +66,15 @@
             background-color: #1e7e34;
         }
         .image-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-            gap: 15px;
+            display: flex;
             justify-content: center;
             margin-bottom: 20px;
         }
 
         .image-container img {
             max-width: 100%;
-            margin: auto;
+            height: auto;
+            border-radius: 8px;
         }
 
         @media (max-width: 768px) {
@@ -120,8 +119,9 @@
 <div class="container">
     <h1>There is / There are - David and Goliath</h1>
     
-    <!-- Referência para a imagem -->
-    <img src="image.png" alt="David and Goliath" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
+    <div class="image-container">
+        <img src="image.png" alt="David and Goliath">
+    </div>
 
     <div class="section">
         <h2>A</h2>
