--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -120,7 +120,8 @@
     <h1>There is / There are - David and Goliath</h1>
     
     <div class="image-container">
-        <img src="image.png" alt="David and Goliath">
+        <!-- Aqui está a nova imagem -->
+        <img src="A_high-quality,_colorful_illustration_of_the_bibli.png" alt="David and Goliath">
     </div>
 
     <div class="section">
