--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -121,7 +121,7 @@
     
     <div class="image-container">
         <!-- Aqui está a nova imagem -->
-        <img src="A_high-quality,_colorful_illustration_of_the_bibli.png" alt="David and Goliath">
+        <img src="image.png" alt="David and Goliath">
     </div>
 
     <div class="section">
