--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -43,7 +43,7 @@
             padding: 5px 0;
         }
         .section input[type="text"] {
-            width: calc(100% - 20px);
+            width: 100%;
             padding: 10px;
             margin-top: 10px;
             border: 1px solid #ccc;
@@ -120,7 +120,6 @@
     <h1>There is / There are - David and Goliath</h1>
     
     <div class="image-container">
-        <!-- Aqui está a nova imagem -->
         <img src="image.png" alt="David and Goliath">
     </div>
 
