--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -49,6 +49,12 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
+            background-color: #f4f4f4;
+            cursor: not-allowed;
+        }
+        .section input[readonly] {
+            background-color: #f4f4f4;
+            color: #000;
         }
         .btn-download {
             display: block;
@@ -183,9 +189,9 @@
     <div class="section">
         <h2>F</h2>
         <p>Now you. Write about what <strong>there is</strong> or <strong>there are</strong> in your favorite story:</p>
-        <input type="text" placeholder="1. ________________________________________________________">
-        <input type="text" placeholder="2. ________________________________________________________">
-        <input type="text" placeholder="3. ________________________________________________________">
+        <input type="text" placeholder="1. ________________________________________________________" readonly>
+        <input type="text" placeholder="2. ________________________________________________________" readonly>
+        <input type="text" placeholder="3. ________________________________________________________" readonly>
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
