--- a/nivelA/unidade1/Grammar2/index.html
+++ b/nivelA/unidade1/Grammar2/index.html
@@ -201,7 +201,7 @@
 <div class="container">
     <h1>There is / There are - Negative and Interrogative Forms</h1>
     
-    <img src="image.png" alt="David and Goliath" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
+    <img src="foto4.png" alt="David and Goliath" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
 
     <div class="section">
         <h2>A</h2>
