--- a/nivelA/unidade1/Grammar2/index.html
+++ b/nivelA/unidade1/Grammar2/index.html
@@ -45,9 +45,11 @@
         .input-line {
             display: block;
             width: 100%;
-            max-width: 100%;
             border-bottom: 1px solid black;
             margin-bottom: 10px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
         .btn-download {
             display: block;
