--- a/nivelA/unidade1/Fine Motor Skills/index.html
+++ b/nivelA/unidade1/Fine Motor Skills/index.html
@@ -117,10 +117,9 @@
     </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #f8f8f8; color: #333; border: 1px solid #ccc; border-radius: 5px; font-size: 1.2rem; cursor: pointer;">
+<button class="back-btn" onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #f8f8f8; color: #333; border: 1px solid #ccc; border-radius: 5px; font-size: 1.2rem; cursor: pointer;">
     Back
 </button>
-
 
     <div class="header">
         <img src="Logo.png" alt="Logo">
@@ -214,13 +213,14 @@
         }
 
         function generatePDF() {
-            // Esconder o botão X e inputs temporariamente
+            // Esconder o botão X, inputs e botão BACK temporariamente
             document.querySelectorAll('.remove-btn').forEach(btn => btn.classList.add('hidden'));
             document.getElementById('imageInput').classList.add('hidden');
             document.getElementById('wordInput').classList.add('hidden');
             document.getElementById('repeatInput').classList.add('hidden');
             document.getElementById('addBtn').classList.add('hidden');
             document.getElementById('pdfBtn').classList.add('hidden');
+            document.querySelector('.back-btn').classList.add('hidden'); // Esconder o botão BACK
 
             // Mostrar a linha Name/Date abaixo do título
             const nameDate = document.createElement('div');
@@ -239,13 +239,14 @@
               })
               .save()
               .then(() => {
-                // Restaurar o botão X e inputs após a geração do PDF
+                // Restaurar o botão X, inputs e botão BACK após a geração do PDF
                 document.querySelectorAll('.remove-btn').forEach(btn => btn.classList.remove('hidden'));
                 document.getElementById('imageInput').classList.remove('hidden');
                 document.getElementById('wordInput').classList.remove('hidden');
                 document.getElementById('repeatInput').classList.remove('hidden');
                 document.getElementById('addBtn').classList.remove('hidden');
                 document.getElementById('pdfBtn').classList.remove('hidden');
+                document.querySelector('.back-btn').classList.remove('hidden'); // Restaurar o botão BACK
 
                 // Remover a linha Name/Date da tela após o PDF ser gerado
                 document.body.removeChild(nameDate);
