--- a/nivelA/unidade1/Fine Motor Skills/index.html
+++ b/nivelA/unidade1/Fine Motor Skills/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            margin: 10px 20px;
+            margin: 10px 30px; /* Reduzir o espaço superior */
             font-family: Arial, sans-serif;
             background-color: #ffffff;
         }
@@ -22,22 +22,18 @@
             position: relative;
             display: flex;
             align-items: center;
-            page-break-inside: avoid;
-            flex-wrap: wrap;
+            page-break-inside: avoid; /* Evitar quebras dentro do contêiner */
         }
 
         .dotted-text {
             font-family: 'KGPrimaryDots', sans-serif;
-            font-size: 4vw;
+            font-size: 48px;
             letter-spacing: 3px;
-            max-width: 100%;
-            overflow-wrap: break-word;
         }
 
         .word {
-            font-size: 3vw;
+            font-size: 36px;
             margin-right: 20px;
-            word-wrap: break-word;
         }
 
         .hidden {
@@ -45,7 +41,7 @@
         }
 
         .image-preview {
-            max-width: 100%;
+            width: 150px;
             height: auto;
             margin-right: 20px;
         }
@@ -55,17 +51,16 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 20px;
-            flex-wrap: wrap;
         }
 
         .header img {
-            width: 60px;
+            width: 80px;
             height: auto;
             margin-right: 20px;
         }
 
         .header h1 {
-            font-size: 6vw;
+            font-size: 36px;
             text-align: center;
         }
 
@@ -77,7 +72,7 @@
             color: white;
             border: none;
             padding: 5px 10px;
-            font-size: 2.5vw;
+            font-size: 16px;
             cursor: pointer;
             border-radius: 50%;
         }
@@ -85,11 +80,11 @@
         /* Melhorar inputs e botões */
         input[type="file"], input[type="text"], input[type="number"] {
             padding: 10px;
-            font-size: 4vw;
+            font-size: 16px;
             border-radius: 5px;
             border: 1px solid #ccc;
             width: 100%;
-            max-width: 100%;
+            max-width: 400px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
@@ -97,13 +92,11 @@
             background-color: #4CAF50;
             color: white;
             padding: 12px 20px;
-            font-size: 4vw;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            width: 100%;
-            max-width: 100%;
         }
 
         button:hover {
@@ -119,42 +112,6 @@
 
         input[type="text"]:hover, input[type="number"]:hover, input[type="file"]:hover, button:hover {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        @media (min-width: 768px) {
-            .dotted-text {
-                font-size: 32px;
-            }
-
-            .word {
-                font-size: 24px;
-            }
-
-            .remove-btn {
-                font-size: 16px;
-            }
-
-            .header img {
-                width: 80px;
-            }
-
-            .header h1 {
-                font-size: 36px;
-            }
-
-            input[type="file"], input[type="text"], input[type="number"] {
-                font-size: 16px;
-                max-width: 400px;
-            }
-
-            button {
-                font-size: 16px;
-                max-width: 400px;
-            }
-
-            .image-preview {
-                width: 150px;
-            }
         }
 
     </style>
