--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah Missing Word</title>
+    <title>Hannah Missing Letter</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -220,6 +220,7 @@
         function speakText(text) {
             const synth = window.speechSynthesis;
             const utterThis = new SpeechSynthesisUtterance(text);
+            utterThis.lang = 'en-US'; // Define o idioma para inglês dos Estados Unidos
             synth.speak(utterThis);
         }
 
