--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -36,6 +36,18 @@
             max-width: 300px;
         }
 
+        .checkbox-container {
+            display: flex;
+            align-items: center;
+            font-size: 1.5rem;
+            color: #8b4513;
+            margin-bottom: 15px;
+        }
+
+        .checkbox-container input {
+            margin-right: 10px;
+        }
+
         .button {
             padding: 15px 25px;
             background-color: #ff6347;
@@ -177,7 +189,7 @@
         Back
     </button>
 
-    <h1>Hannah Missing Word</h1>
+    <h1>Hannah Missing Letter</h1>
 
     <!-- Upload de Imagem -->
     <label class="input-field">Upload Image (Optional): 
@@ -190,9 +202,10 @@
     </label>
 
     <!-- Checkbox para ocultar palavra -->
-    <label class="input-field">
-        <input type="checkbox" id="hide-word"> Hide full word
-    </label>
+    <div class="checkbox-container">
+        <input type="checkbox" id="hide-word">
+        <label for="hide-word">Hide full word</label>
+    </div>
 
     <!-- Botões para adicionar atividade e gerar PDF -->
     <button class="button" id="add-activity-btn">Add Activity</button>
@@ -343,7 +356,7 @@
 
             doc.addImage(logoImg, 'PNG', 10, 5, 20, 20);
             doc.setFontSize(22);
-            doc.text('Hannah Missing Word', 40, 20);
+            doc.text('Hannah Missing Letter', 40, 20);
 
             doc.setFontSize(14);
             doc.text('Name: ____________________________________  Date: __________', 10, 35);
@@ -389,7 +402,7 @@
 
             await Promise.all(pdfPromises);
 
-            doc.save('hannah-missing-word.pdf');
+            doc.save('hannah-missing-letter.pdf');
         });
     </script>
 </body>
