--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -10,6 +10,11 @@
             background-color: #ffebcd;
             margin: 0;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
 
         h1 {
@@ -20,11 +25,19 @@
             text-shadow: 2px 2px #ffd700;
         }
 
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .input-field {
             display: block;
             margin-bottom: 15px;
             font-size: 1.5rem;
             color: #8b4513;
+            text-align: left;
+            width: 100%;
         }
 
         input[type="text"], input[type="file"], input[type="checkbox"] {
@@ -42,10 +55,19 @@
             font-size: 1.5rem;
             color: #8b4513;
             margin-bottom: 15px;
+            text-align: left;
+            width: 100%;
         }
 
         .checkbox-container input {
             margin-right: 10px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 300px;
         }
 
         .button {
@@ -191,25 +213,29 @@
 
     <h1>Hannah Missing Letter</h1>
 
-    <!-- Upload de Imagem -->
-    <label class="input-field">Upload Image (Optional): 
-        <input type="file" id="image-upload" accept="image/*">
-    </label>
+    <div class="form-container">
+        <!-- Upload de Imagem -->
+        <label class="input-field">Upload Image (Optional): 
+            <input type="file" id="image-upload" accept="image/*">
+        </label>
 
-    <!-- Inserção de Palavra -->
-    <label class="input-field">Associated Word:
-        <input type="text" id="word-input" placeholder="Enter the word here">
-    </label>
+        <!-- Inserção de Palavra -->
+        <label class="input-field">Associated Word:
+            <input type="text" id="word-input" placeholder="Enter the word here">
+        </label>
 
-    <!-- Checkbox para ocultar palavra -->
-    <div class="checkbox-container">
-        <input type="checkbox" id="hide-word">
-        <label for="hide-word">Hide full word</label>
+        <!-- Checkbox para ocultar palavra -->
+        <div class="checkbox-container">
+            <input type="checkbox" id="hide-word">
+            <label for="hide-word">Hide full word</label>
+        </div>
+
+        <!-- Botões para adicionar atividade e gerar PDF -->
+        <div class="button-container">
+            <button class="button" id="add-activity-btn">Add Activity</button>
+            <button class="button" id="generate-pdf-btn">Generate PDF</button>
+        </div>
     </div>
-
-    <!-- Botões para adicionar atividade e gerar PDF -->
-    <button class="button" id="add-activity-btn">Add Activity</button>
-    <button class="button" id="generate-pdf-btn">Generate PDF</button>
 
     <!-- Contêiner onde as atividades serão exibidas -->
     <div id="activity-container" class="activity-container"></div>
