ajustes campo e pdf

--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -104,6 +104,8 @@
 
         .activity-container {
             margin-top: 20px;
+            width: 100%;
+            max-width: 1000px; /* Define um limite máximo para a largura */
         }
 
         .activity {
@@ -116,6 +118,7 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
             overflow: hidden;
+            width: 100%; /* Ocupar toda a largura disponível */
         }
 
         .activity img {
@@ -284,6 +287,10 @@
             deleteButton.classList.add('delete-icon');
             deleteButton.innerText = 'X';
             deleteButton.onclick = function() {
+                const index = activities.indexOf(activity);
+                if (index > -1) {
+                    activities.splice(index, 1); // Remove a atividade da lista
+                }
                 activityDiv.remove(); // Remover a atividade da tela
             };
             activityDiv.appendChild(deleteButton);
@@ -351,7 +358,8 @@
             activityDiv.appendChild(wordContainer);
             activityContainer.appendChild(activityDiv);
 
-            activities.push({ word, hideWord, imageDataURL });
+            const activity = { word, hideWord, imageDataURL };
+            activities.push(activity);
 
             // Rolagem automática para o fim da página
             activityDiv.scrollIntoView({ behavior: 'smooth' });
