--- a/nivelA/unidade1/Mixed Letters/index.html
+++ b/nivelA/unidade1/Mixed Letters/index.html
@@ -5,7 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Mixed Letters</title>
     <style>
-        /* Coloque aqui o estilo original sem alterações */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        label, input, button {
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+        }
+
+        input[type="text"], input[type="file"], input[type="checkbox"] {
+            padding: 10px;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        button {
+            padding: 10px 20px;
+            margin: 10px 0;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .activity-container {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -14,31 +58,26 @@
     <h1>Hannah Mixed Letters</h1>
 
     <div class="form-container">
-        <!-- Upload de Imagem -->
         <label>Upload Image (Optional): 
             <input type="file" id="image-upload" accept="image/*">
         </label>
 
-        <!-- Inserção de Palavra -->
         <label>Associated Word:
             <input type="text" id="word-input" placeholder="Enter the word here">
         </label>
 
-        <!-- Checkbox para ocultar palavra -->
         <div>
             <input type="checkbox" id="hide-word">
             <label for="hide-word">Hide full word</label>
         </div>
 
-        <!-- Botões para adicionar atividade e gerar PDF -->
         <div>
             <button id="add-activity-btn">Add Activity</button>
             <button id="generate-pdf-btn">Generate PDF</button>
         </div>
     </div>
 
-    <!-- Contêiner onde as atividades serão exibidas -->
-    <div id="activity-container"></div>
+    <div id="activity-container" class="activity-container"></div>
 
     <script>
         function speakText(text) {
@@ -48,18 +87,18 @@
             synth.speak(utterThis);
         }
 
-        let activities = []; // Lista para armazenar as atividades criadas
+        let activities = [];
 
         function loadImageAsBase64(imageFile) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
                 reader.onload = function(event) {
-                    resolve(event.target.result); // Retornar imagem base64
+                    resolve(event.target.result);
                 };
                 reader.onerror = function() {
                     reject('Error loading image.');
                 };
-                reader.readAsDataURL(imageFile); // Ler imagem
+                reader.readAsDataURL(imageFile);
             });
         }
 
@@ -78,15 +117,14 @@
             const activityContainer = document.getElementById('activity-container');
             const activityDiv = document.createElement('div');
 
-            // Criar o ícone de delete "X"
             const deleteButton = document.createElement('button');
             deleteButton.innerText = 'X';
             deleteButton.onclick = function() {
                 const index = activities.indexOf(activity);
                 if (index > -1) {
-                    activities.splice(index, 1); // Remove a atividade da lista
+                    activities.splice(index, 1);
                 }
-                activityDiv.remove(); // Remover a atividade da tela
+                activityDiv.remove();
             };
             activityDiv.appendChild(deleteButton);
 
@@ -105,7 +143,6 @@
             const missingLetterInput = document.createElement('input');
             missingLetterInput.maxLength = 1;
 
-            // Adicionar animação para a letra correta
             const letterAnimation = document.createElement('div');
             letterAnimation.innerText = word.charAt(0);
             activityDiv.appendChild(letterAnimation);
@@ -114,11 +151,10 @@
                 if (missingLetterInput.value.toUpperCase() === word.charAt(0).toUpperCase()) {
                     missingLetterInput.style.borderColor = 'blue';
 
-                    // Falar a letra e a palavra completa
                     speakText(missingLetterInput.value.toUpperCase());
                     setTimeout(() => {
                         speakText(word);
-                    }, 1000); // Aguardar 1 segundo antes de falar a palavra completa
+                    }, 1000);
                 } else {
                     missingLetterInput.style.borderColor = 'red';
                 }
@@ -143,7 +179,6 @@
             const activity = { word, hideWord, imageDataURL };
             activities.push(activity);
 
-            // Limpar os campos após adicionar a atividade
             document.getElementById('word-input').value = '';
             document.getElementById('image-upload').value = '';
             document.getElementById('hide-word').checked = false;
@@ -173,7 +208,7 @@
                 }
 
                 yOffset += 60;
-                if (yOffset > 270) {  // Novo código
+                if (yOffset > 270) {
                     doc.addPage();
                     yOffset = 20;
                 }
