--- a/nivelA/unidade1/Mixed Letters/index.html
+++ b/nivelA/unidade1/Mixed Letters/index.html
@@ -5,24 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Mixed Letters</title>
     <style>
+        /* Aplicação de Times New Roman em todo o documento */
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             background-color: #ffebcd;
             margin: 0;
             padding: 20px;
         }
+
         h1 {
             text-align: center;
             color: #ff4500;
             font-size: 3rem;
             margin-bottom: 20px;
         }
+
         .input-field {
             display: block;
             margin-bottom: 15px;
             font-size: 1.5rem;
             color: #8b4513;
         }
+
         input[type="text"], input[type="file"], input[type="checkbox"] {
             padding: 10px;
             font-size: 1.2rem;
@@ -30,7 +34,9 @@
             border-radius: 10px;
             width: 100%;
             max-width: 300px;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .button {
             padding: 15px 25px;
             background-color: #ff6347;
@@ -40,26 +46,34 @@
             font-size: 1.5rem;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .button:hover {
             background-color: #e55342;
         }
+
         #add-activity-btn {
             background-color: #48d1cc;
         }
+
         #add-activity-btn:hover {
             background-color: #40b4b0;
         }
+
         #generate-pdf-btn {
             background-color: #ffd700;
             color: black;
         }
+
         #generate-pdf-btn:hover {
             background-color: #ffcc00;
         }
+
         .activity-container {
             margin-top: 20px;
         }
+
         .activity {
             display: flex;
             flex-direction: column;
@@ -71,13 +85,16 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
             overflow: hidden;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .activity img {
             max-width: 150px;
             max-height: 150px;
             border-radius: 12px;
             margin-bottom: 10px;
         }
+
         .mixed-letters {
             font-size: 36px;
             font-weight: bold;
@@ -86,19 +103,24 @@
             justify-content: space-around;
             margin-bottom: 15px;
         }
+
         .letter-input {
             width: 40px;
             font-size: 36px;
             text-align: center;
             border-bottom: 2px solid black;
             margin-right: 5px;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .correct {
             border-color: blue;
         }
+
         .incorrect {
             border-color: red;
         }
+
         .delete-icon {
             position: absolute;
             right: 10px;
@@ -113,15 +135,20 @@
             font-size: 16px;
             text-align: center;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .delete-icon:hover {
             background-color: #e55342;
         }
+
         .word-container {
             display: flex;
             flex-direction: column;
             align-items: center;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .check-answer-btn {
             background-color: #32CD32;
             color: white;
@@ -131,7 +158,9 @@
             border-radius: 10px;
             font-size: 1.2rem;
             cursor: pointer;
+            font-family: 'Times New Roman', Times, serif;
         }
+
         .check-answer-btn:hover {
             background-color: #28a428;
         }
