--- a/nivelA/unidade1/Mixed Letters/index.html
+++ b/nivelA/unidade1/Mixed Letters/index.html
@@ -54,15 +54,6 @@
             background-color: #40b4b0;
         }
 
-        #generate-pdf-btn {
-            background-color: #ffd700;
-            color: black;
-        }
-
-        #generate-pdf-btn:hover {
-            background-color: #ffcc00;
-        }
-
         .activity-container {
             margin-top: 20px;
             width: 100%;
@@ -166,9 +157,8 @@
 <h1>Hannah Mixed Letters</h1>
 
 <div class="form-container">
-    <!-- Botões para adicionar atividade e gerar PDF -->
+    <!-- Botão para adicionar atividade -->
     <button class="button" id="add-activity-btn">Add Activity</button>
-    <button class="button" id="generate-pdf-btn">Generate PDF</button>
 </div>
 
 <!-- Contêiner onde as atividades serão exibidas -->
@@ -296,7 +286,7 @@
         activityDiv.appendChild(wordContainer);
         activityContainer.appendChild(activityDiv);
 
-        // Guardar a atividade para o PDF
+        // Guardar a atividade
         const activityData = { word, shuffledWord, imageDataURL: imageUrl };
         activityDiv.activityData = activityData;
         activities.push(activityData); // Adicionar à lista de atividades
@@ -307,70 +297,6 @@
 
     // Carregar atividades automaticamente ao carregar a página
     document.addEventListener('DOMContentLoaded', loadActivities);
-
-    // Função para gerar o PDF com as atividades em uma única coluna
-    document.getElementById('generate-pdf-btn').addEventListener('click', async function() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
-
-        const logoPath = 'Logo.png';
-        const logoLoaded = new Promise((resolve, reject) => {
-            const img = new Image();
-            img.src = logoPath;
-            img.onload = function() {
-                resolve(img);
-            };
-            img.onerror = function() {
-                reject('Error loading logo.');
-            };
-        });
-
-        const logoImg = await logoLoaded;
-
-        doc.addImage(logoImg, 'PNG', 10, 5, 20, 20);
-        doc.setFontSize(22);
-        doc.text('Hannah Mixed Letters', 40, 20);
-
-        doc.setFontSize(14);
-        doc.text('Name: ____________________________________  Date: __________', 10, 35);
-
-        let yOffset = 45;
-        let currentX = 10; // Mantendo tudo em uma coluna
-
-        const checkAddPage = (doc, yOffset) => {
-            if (yOffset > doc.internal.pageSize.height - 50) {
-                doc.addPage();
-                yOffset = 20;
-            }
-            return yOffset;
-        };
-
-        const pdfPromises = activities.map(async (activity, index) => {
-            if (activity.imageDataURL) {
-                doc.addImage(activity.imageDataURL, 'PNG', currentX, yOffset, 40, 40);
-            }
-
-            doc.setFontSize(24);
-            const mixedWordText = activity.shuffledWord;
-            doc.text(mixedWordText, currentX + 50, yOffset + 20);
-
-            // Adicionar linhas para o aluno escrever as letras
-            let lineX = currentX + 50;
-            let lineY = yOffset + 40;
-            doc.setLineWidth(0.5);
-            for (let i = 0; i < activity.word.length; i++) {
-                doc.line(lineX, lineY, lineX + 10, lineY); // Criar uma linha de 10 unidades de comprimento
-                lineX += 12; // Adicionar espaçamento entre as linhas
-            }
-
-            yOffset += 60; // Ajustar a distância entre as atividades
-            yOffset = checkAddPage(doc, yOffset);
-        });
-
-        await Promise.all(pdfPromises);
-
-        doc.save('hannah-mixed-letters.pdf');
-    });
 
 </script>
 
